# grove

./: .gitignore  Cargo.toml  PRD.md  README.md  grove-picker.sh  grove-sidebar.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: agent.rs  claude.rs  cli.rs  config.rs  db.rs  error.rs  git.rs  main.rs  output.rs  recents.rs  state.rs  tmux.rs  validation.rs
src/commands/: add.rs  attach.rs  close.rs  compose.rs  init.rs  list.rs  mod.rs  register.rs  repos.rs  send.rs  status.rs  sync.rs
src/tui/: actions.rs  app.rs  event.rs  mod.rs  source.rs  tree.rs  ui.rs
tests/: cli_tests.rs
tests/integration/: helpers.rs
