[package]
name = "grove"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
dialoguer = "0.12.0"
ratatui = "0.30"
crossterm = "0.28"
signal-hook = "0.3"
ansi-to-tui = "8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
