[package]
name = "grove"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
dialoguer = "0.12.0"
ratatui = "0.30"
crossterm = "0.28"
signal-hook = "0.3"
ansi-to-tui = "8"
unidiff = "0.4.0"
rusqlite = { version = "0.33", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
rusqlite = { version = "0.33", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
